--- a/scons/SConscript
+++ b/scons/SConscript
@@ -3,7 +3,7 @@ Import('env')
 _INCLUDES = [Dir('../src').abspath]
 
 _SOURCES = ['PParams.cpp']
-_SOURCES = [File('../src/' + s).abspath for s in _SOURCES]
+_SOURCES = [File('../src/mndlkit/params/' + s).abspath for s in _SOURCES]
 
 env.Append(APP_SOURCES = _SOURCES)
 env.Append(CPPPATH = _INCLUDES)
