--- a/scons/SConscript
+++ b/scons/SConscript
@@ -4,7 +4,7 @@ _INCLUDES = [Dir('../src').abspath]
 
 _SOURCES_PARAMS = ['PParams.cpp']
 _SOURCES_PARAMS = [File('../src/mndlkit/params/' + s).abspath for s in _SOURCES_PARAMS]
-_SOURCES_FX = ['GaussianBlur.cpp', 'KawaseBloom.cpp']
+_SOURCES_FX = ['BrightnessContrast.cpp', 'GaussianBlur.cpp', 'KawaseBloom.cpp']
 _SOURCES_FX = [File('../src/mndlkit/gl/fx/' + s).abspath for s in _SOURCES_FX]
 _SOURCES = _SOURCES_PARAMS + _SOURCES_FX
 
